Fixet shop.css så text er center.align

--- a/web/shop.css
+++ b/web/shop.css
@@ -13,6 +13,7 @@ and open the template in the editor.
 body
 {
 font-family:sans-serif, arial;
+text-align: center;
 }
 
 
